member quotes (some)

--- a/v1.5/members.html
+++ b/v1.5/members.html
@@ -206,7 +206,7 @@
                     </div>
                     <div class = "col-4 col-md-3">
                         <div class="dot blue">
-                            <div class = "quote">Placeholder for a quote that could be really long and annoying to implement</div>
+                            <div class = "quote">It's Never Too Late to Be What You Might Have Been</div>
                             <div class = "img-container">
                                 <a href ="https://www.linkedin.com/in/anderson-lee/" target="_blank">
                                 <img alt="anderson" src="../assets/img//members/anderson.png" class = "member"/>
@@ -268,7 +268,7 @@
                     </div>
                     <div class = "col-4 col-md-3">
                         <div class="dot blue">
-                            <div class = "quote">Placeholder for a quote that could be really long and annoying to implement</div>
+                            <div class = "quote">My initials are B.S so you can take me very seriously</div>
                             <div class = "img-container">
                                 <a href ="https://www.linkedin.com/in/brendanshih/" target="_blank">
                                 <img alt="brendan" src="../assets/img//members/brendan.png" class = "member"/>
@@ -580,7 +580,7 @@
                     </div>
                     <div class = "col-6 col-md-3">
                         <div class="dot green">
-                            <div class = "quote">Placeholder for a quote that could be really long and annoying to implement</div>
+                            <div class = "quote">Imagination is more important than knowledge</div>
                             <div class = "img-container">
                                 <a href ="linkedin.com/in/vincejhan/" target="_blank">
                                 <img alt="vince" src="../assets/img//members/vince.png" class = "member"/>
