--- a/v1.5/projects.html
+++ b/v1.5/projects.html
@@ -78,12 +78,12 @@
     
     <!-- Page Content -->
             <div class="white-background">
-                <h1 style="text-align: center;">PROJECT GALLERY</h1>
+                <h1 style="text-align: center;">OUR WORK</h1>
                 <h5 style="text-align: center;  font-style: italic; font-weight: .1px; padding-bottom: 4%;">View our assortment of
                     projects over the years.</h5>
                 <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Consequat nunc, enim libero varius purus, consectetur vel sem. </p> -->
                 <div class="container">
-                    <h2 class="proj-subheader">Let’s Collaborate!</h2>
+                    <h3 class="proj-subheader">Let’s Collaborate!</h3>
                     <h4 class="proj-caption">What does a partnership with us look like?</h4>
                     <p class="proj-text">
                         We work on semester-long, pro-bono projects. In the past, we've partnered with 30+ professors, startups, and nonprofits both locally and internationally. Got a project idea but don’t have sufficient time or resources to allocate? We will work with you to assemble the dream team for your project. We are currently open for applications for our fall projects!
@@ -92,32 +92,33 @@
                     <p class="proj-text">
                         Through partnerships, we hope to engage communicative organizations and build a transparent, prolonged relationship with our mentors and team. We utilize design thinking frameworks in every project we take on, in order to create innovative, thoughtful, and intentional solutions that create a tangible impact with the user in mind.
                     </p>
-                    <img src="../assets/img/projects/design-thinking.svg" style="display: block; margin: auto;">
+                    <img src="../assets/img/projects/design-thinking.svg" style="display: block; margin:auto; width: 70vw;">
                     <h4 class="proj-caption">A breakdown of our club:</h4>
                     <p class="proj-text">
                         Our members' skillsets are diverse and include experience with rapid prototyping, web and app development (frontend and backend), user research and interviews, electrical engineering, patent law, 3D modeling, organizational reports, and much more. Feel free to browse through our project gallery below to get a more holistic picture of the work we do.
                     </p>
                     <div class="row">
-                        <div class="col-6 d-flex justify-content-center">
+                        <div class="col-12 col-lg-6 d-flex justify-content-center">
                             <img src="../assets/img/projects/major-distribution.svg">
                         </div>
-                        <div class="col-6 d-flex justify-content-center">
+                        <div class="col-12 col-lg-6 d-flex justify-content-center">
                             <img src="../assets/img/projects/member-skillsets.svg">
                         </div>
                     </div>
                     <hr>
                     <div class="row">
-                        <div class="col-6 d-flex justify-content-center">
-                            <h4 class="proj-caption">Interested?</h4>
+                        <div class="col-6 interested">
+                            <h4 class="proj-caption really-interested">Interested?</h4>
                         </div>
-                        <div class="col-6 d-flex justify-content-center">
+                        <div class="col-6">
                             <div id="contact-button" onclick="window.location.href='https://forms.gle/dSAgFm9jpetY4B4T6';">Contact Us</div>
                         </div>
                     </div>
-                    <hr>
+                    <hr style="padding-bottom: 8rem;">
                 </div>
             </div>
 <div class="container">
+    <h3 class="proj-subheader">Past Projects</h3>
         <p style="padding-left: 6.7%; padding-top: 2rem;">Categories:
             <mark style="border-radius: 10%; background-color: #CCE6FF;">DELIVERABLES</mark>
             <mark style="border-radius: 10%; background-color: #FFF6A9;">TOPIC</mark>
