--- a/v1.5/netic15.html
+++ b/v1.5/netic15.html
@@ -248,7 +248,7 @@
                 <div id=underline1></div>
             </div>
             <p>
-                We partnered with <a href="PLACEHOLDER" target="_blank" class="partner-link">Netic Health</a>, a Berkeley-based startup.
+                We partnered with <a href="https://www.linkedin.com/company/netic-corporation/" target="_blank" class="partner-link">Netic Health</a>, a Berkeley-based startup.
                 Netic aims to provide physical therapy and rehabilitation to anyone through a smartphone. 
             </p> <!-- partner txt -->
 
