finishing projects page

--- a/v1.5/members.html
+++ b/v1.5/members.html
@@ -380,7 +380,7 @@
                     </div>
                     <div class = "col-4 col-md-3">
                         <div class="dot red">
-                            <div class = "quote">I booed Drake at Coachella</div>
+                            <div class = "quote">I booed Drake at Flog Gnaw</div>
                             <div class = "img-container">
                                 <a href ="https://www.linkedin.com/in/laurel-nelson-10b572157/" target="_blank">
                                 <img alt="laurel" src="../assets/img//members/laurel.png" class = "member"/>
