--- a/v1.5/webdevteam.html
+++ b/v1.5/webdevteam.html
@@ -87,7 +87,7 @@
                             <img alt="hearts3" src="../assets/img/members/hearts3.svg" class="hearts"/>
                         </div>
                         <div class="dot red">
-                            <div class = "quote">neha's quote 2.0</div>
+                            <div class = "quote">neha</div>
                             <div class = "img-container">
                                 <img alt="neha" src="../assets/img/members/neha2.png" class = "member"/>
                             </div>
@@ -101,7 +101,7 @@
                             <img alt="hearts3" src="../assets/img/members/hearts3.svg" class="hearts"/>
                         </div>
                         <div class="dot red">
-                            <div class = "quote">maya's quote 2.0</div>
+                            <div class = "quote">*screams in international Kpop sensational sunshine rainbow traditional transfer USB hub shrimp</div>
                             <div class = "img-container">
                                 <img alt="maya" src="../assets/img/members/maya.png" class = "member"/>
                             </div>
@@ -115,7 +115,7 @@
                             <img alt="hearts2half" src="../assets/img/members/hearts2half.svg" class="hearts"/>
                         </div>
                         <div class="dot red">
-                            <div class = "quote">jasmine's quote 2.0</div>
+                            <div class = "quote">meh... <br> — gudetama</div>
                             <div class = "img-container">
                                 <img alt="jasmine" src="../assets/img/members/jasmine2.png" class = "member"/>
                             </div>
@@ -150,7 +150,7 @@
                             <img alt="hearts2half" src="../assets/img/members/hearts2half.svg" class="hearts"/>
                         </div>
                         <div class="dot yellow">
-                            <div class = "quote">I like pie</div>
+                            <div class = "quote">"Education is the most powerful weapon which you can use to change the world" - Nelson Mandela</div>
                             <div class = "img-container">
                                 <img alt="bongi" src="../assets/img/members/bongi2.png" class = "member"/>
                             </div>
@@ -164,7 +164,7 @@
                             <img alt="hearts2" src="../assets/img/members/hearts2.svg" class="hearts"/>
                         </div>
                         <div class="dot yellow">
-                            <div class = "quote">courtnie's quote</div>
+                            <div class = "quote">courtnie</div>
                             <div class = "img-container">
                                 <img alt="courtnie" src="../assets/img/members/courtnie.png" class = "member"/>
                             </div>
@@ -199,7 +199,7 @@
                             <img alt="hearts3" src="../assets/img/members/hearts3.svg" class="hearts"/>
                         </div>
                         <div class="dot green">
-                            <div class = "quote">anika's quote 2.0</div>
+                            <div class = "quote">i want my wedding dress to be the bsfc green</div>
                             <div class = "img-container">
                                 <img alt="anika" src="../assets/img/members/anika.png" class = "member"/>
                             </div>
@@ -213,7 +213,7 @@
                             <img alt="hearts1half" src="../assets/img/members/hearts1half.svg" class="hearts"/>
                         </div>
                         <div class="dot green">
-                            <div class = "quote">natalie's quote 2.0</div>
+                            <div class = "quote">I also wanted to sleep in, but here we both are...</div>
                             <div class = "img-container">
                                 <img alt="natalie" src="../assets/img/members/natalie2.png" class = "member"/>
                             </div>
@@ -227,7 +227,7 @@
                             <img alt="hearts2" src="../assets/img/members/hearts2.svg" class="hearts"/>
                         </div>
                         <div class="dot blue">
-                            <div class = "quote">iris' quote 2.0</div>
+                            <div class = "quote">Click <a href="https://www.linkedin.com/in/irisghou/">here</a> for a random ideas generator!</div>
                             <div class = "img-container">
                                 <img alt="iris" src="../assets/img/members/iris2.png" class = "member"/>
                             </div>
@@ -241,7 +241,7 @@
                             <img alt="hearts3" src="../assets/img/members/hearts3.svg" class="hearts"/>
                         </div>
                         <div class="dot blue">
-                            <div class = "quote">zulaika's quote</div>
+                            <div class = "quote">zulaika</div>
                             <div class = "img-container">
                                 <img alt="zulaika" src="../assets/img/members/zulaika.png" class = "member"/>
                             </div>
