project page img bug fix

--- a/v1.5/projects.html
+++ b/v1.5/projects.html
@@ -99,10 +99,10 @@
                     </p>
                     <div class="row">
                         <div class="col-12 col-lg-6 d-flex justify-content-center">
-                            <img src="../assets/img/projects/major-distribution.svg">
+                            <img src="../assets/img/projects/major-distribution.svg" class="img-fluid">
                         </div>
                         <div class="col-12 col-lg-6 d-flex justify-content-center">
-                            <img src="../assets/img/projects/member-skillsets.svg">
+                            <img src="../assets/img/projects/member-skillsets.svg" class="img-fluid">
                         </div>
                     </div>
                     <hr>
