--- a/v1.5/projects.html
+++ b/v1.5/projects.html
@@ -121,7 +121,7 @@
             </div>
 <div class="container">
     <h3 class="proj-subheader">Past Projects</h3>
-        <p style="padding-left: 6.7%; padding-top: 2rem;">Categories:
+        <p style="padding-left: 6.7%; padding-top: 2rem;" class="categories-hide">Categories:
             <mark style="border-radius: 10%; background-color: #CCE6FF;">DELIVERABLES</mark>
             <mark style="border-radius: 10%; background-color: #FFF6A9;">TOPIC</mark>
             <mark style="border-radius: 10%; background-color: #CCF4D5;">TOOLS USED</mark>
