--- a/index.html
+++ b/index.html
@@ -137,43 +137,43 @@
         <div class="projects-section">
             <div class="container projects-div">
                 <div class="row">
-                    <div class="project-icon col-4 d-flex justify-content-center">
+                    <div class="project-icon col-5 d-flex justify-content-center">
                         <a href="v1.5/alemany15.html">
-                            <img src="assets/img/mainscrollv15/alemany.svg" class="project-link" alt="Alemany Farms">
+                            <img src="assets/img/mainscrollv15/alemany.svg" class="project-link img-fluid" alt="Alemany Farms">
                         </a>
                     </div>
-                    <div class="col-4 space">
+                    <div class="col-2 space">
                     </div>  
-                    <div class="project-icon col-4 d-flex justify-content-center">
+                    <div class="project-icon col-5 d-flex justify-content-center">
                         <a href="v1.5/groupsource15.html">
-                            <img src="assets/img/mainscrollv15/groupsource.svg" class="project-link" alt="Groupsource">
+                            <img src="assets/img/mainscrollv15/groupsource.svg" class="project-link img-fluid" alt="Groupsource">
                         </a>
                     </div>  
-                    <div class="project-icon col-4 d-flex justify-content-center">
+                    <div class="project-icon col-5 d-flex justify-content-center">
                         <a href="v1.5/makerspace15.html">
-                            <img src="assets/img/mainscrollv15/makerspace.svg" class="project-link" alt="Moffitt Makerspace">
+                            <img src="assets/img/mainscrollv15/makerspace.svg" class="project-link img-fluid" alt="Moffitt Makerspace">
                         </a>
                     </div>
-                    <div class="col-4">
+                    <div class="col-2">
                         <div class="container">
                             <img src="assets/img/mainscrollv15/project-planet.svg" class="project-planet" alt="Exploring our recent projects.">
                         </div>
                     </div>
-                    <div class="project-icon col-4 d-flex justify-content-center">
+                    <div class="project-icon col-5 d-flex justify-content-center">
                         <a href="v1.5/netic15.html">
-                            <img src="assets/img/mainscrollv15/netic.svg" class="project-link" alt="Netic Health">
+                            <img src="assets/img/mainscrollv15/netic.svg" class="project-link img-fluid" alt="Netic Health">
                         </a>
                     </div>  
-                    <div class="project-icon col-4 d-flex justify-content-center">
+                    <div class="project-icon col-5 d-flex justify-content-center">
                         <a href="v1.5/bsfc15.html">
-                            <img src="assets/img/mainscrollv15/bsfc.svg" class="project-link" alt="Student Food Collective">
+                            <img src="assets/img/mainscrollv15/bsfc.svg" class="project-link img-fluid" alt="Student Food Collective">
                         </a>
                     </div>
-                    <div class="col-4 space">
+                    <div class="col-2 space">
                     </div>
-                    <div class="project-icon col-4 d-flex justify-content-center">
+                    <div class="project-icon col-5 d-flex justify-content-center">
                         <a href="v1.5/commcafe15.html">
-                            <img src="assets/img/mainscrollv15/commcafe.svg" class="project-link" alt="Community Cafe">
+                            <img src="assets/img/mainscrollv15/commcafe.svg" class="project-link img-fluid" alt="Community Cafe">
                         </a>
                     </div>
                 </div>
