maya webteam quote

--- a/v1.5/webdevteam.html
+++ b/v1.5/webdevteam.html
@@ -101,7 +101,7 @@
                             <img alt="hearts3" src="../assets/img/members/hearts3.svg" class="hearts"/>
                         </div>
                         <div class="dot red">
-                            <div class = "quote">*screams in international Kpop sensational sunshine rainbow traditional transfer USB hub shrimp</div>
+                            <div class = "quote">I don't have think</div>
                             <div class = "img-container">
                                 <img alt="maya" src="../assets/img/members/maya.png" class = "member"/>
                             </div>
