added another member quote

--- a/v1.5/members.html
+++ b/v1.5/members.html
@@ -256,7 +256,7 @@
                     </div>
                     <div class = "col-4 col-md-3">
                         <div class="dot red">
-                            <div class = "quote">misunderstood</div>
+                            <div class = "quote">If I can do design, so can you</div>
                             <div class = "img-container">
                                 <a href ="https://www.linkedin.com/in/batu-akkas-416b0313b/" target="_blank">
                                 <img alt="batu" src="../assets/img//members/batu.png" class = "member"/>
@@ -318,7 +318,7 @@
                     </div>
                     <div class = "col-4 col-md-3">
                         <div class="dot red">
-                            <div class = "quote">Click <a href="https://www.linkedin.com/in/irisghou/">here</a> for a random ideas generator!</div>
+                            <div class = "quote">Click <a href="https://www.linkedin.com/in/irisghou/" style="cursor: grab;">here</a> for a random ideas generator!</div>
                             <div class = "img-container">
                                 <a href ="https://www.linkedin.com/in/irisghou/" target="_blank">
                                 <img alt="iris" src="../assets/img//members/iris.png" class = "member"/>
@@ -582,7 +582,7 @@
                         <div class="dot green">
                             <div class = "quote">Imagination is more important than knowledge</div>
                             <div class = "img-container">
-                                <a href ="linkedin.com/in/vincejhan/" target="_blank">
+                                <a href ="https://www.linkedin.com/in/vincejhan/" target="_blank">
                                 <img alt="vince" src="../assets/img//members/vince.png" class = "member"/>
                                 </a>
                             </div>
