--- a/v1.5/webdevteam.html
+++ b/v1.5/webdevteam.html
@@ -76,7 +76,7 @@
 
     <div class = "header">
         <h1> OUR WEBSITE TEAM </h1>
-        <p> Meet the heart behind the developement, content, and design for this site!</p>
+        <p> Meet the heart behind the development, content, and design for this site!</p>
     </div> 
     <div class = "web">
         <div class = "cont"> 
@@ -227,7 +227,7 @@
                             <img alt="hearts2" src="../assets/img/members/hearts2.svg" class="hearts"/>
                         </div>
                         <div class="dot blue">
-                            <div class = "quote">Click <a href="https://www.linkedin.com/in/irisghou/">here</a> for a random ideas generator!</div>
+                            <div class = "quote">add me on github</div>
                             <div class = "img-container">
                                 <img alt="iris" src="../assets/img/members/iris2.png" class = "member"/>
                             </div>
