updated four more member quotes

--- a/v1.5/members.html
+++ b/v1.5/members.html
@@ -306,7 +306,7 @@
                     </div>
                     <div class = "col-4 col-md-3">
                         <div class="dot yellow">
-                            <div class = "quote">The Absolute <br> Machine&trade;</div>
+                            <div class = "quote">The two best things about humanity are compassion and mathematics.</div>
                             <div class = "img-container">
                                 <a href ="https://www.linkedin.com/in/djasonchen/" target="_blank">
                                 <img alt="dan" src="../assets/img//members/dan.png" class = "member"/>
@@ -380,7 +380,7 @@
                     </div>
                     <div class = "col-4 col-md-3">
                         <div class="dot red">
-                            <div class = "quote">I booed Drake at Flog Gnaw</div>
+                            <div class = "quote">Nothing can dim the light that shines from within. <br> –Maya Angelou </div>
                             <div class = "img-container">
                                 <a href ="https://www.linkedin.com/in/laurel-nelson-10b572157/" target="_blank">
                                 <img alt="laurel" src="../assets/img//members/laurel.png" class = "member"/>
@@ -556,7 +556,7 @@
                     </div>
                     <div class = "col-4 col-md-3">
                         <div class="dot red">
-                            <div class = "quote">I have a Sunny personality</div>
+                            <div class = "quote">It's the power of smile :)</div>
                             <div class = "img-container">
                                 <a >
                                 <img alt="sunny" src="../assets/img//members/sunny.png" class = "member"/>
