--- a/v1.5/members.html
+++ b/v1.5/members.html
@@ -244,7 +244,7 @@
                 <div class = "row"> -->
                     <div class = "col-4 col-md-3">
                         <div class="dot yellow">
-                            <div class = "quote">Big Personality Energy</div>
+                            <div class = "quote">big personality</div>
                             <div class = "img-container">
                                 <a href ="https://www.linkedin.com/in/aryannair/" target="_blank">
                                 <img alt="aryan" src="../assets/img//members/aryan.png" class = "member"/>
