--- a/v1.5/hofmann15.html
+++ b/v1.5/hofmann15.html
@@ -72,10 +72,19 @@
     <div class="topbar"d-flex justify-content-center>
         <div class="container">
             <div class="cool row">
-                <div class="col-12 col-lg-6 d-flex justify-content-center">
-                    <img src="../assets/img/hofmann15/hofmann-landing.svg" class="topbar-img"> <!--landing image-->
-                </div>
                 <div class="col-12 col-lg-6">
+                    <div class="topbar-img d-flex justify-content-center">
+                    <div class="square">
+                    </div>
+                    <figure class="topbar-fig">
+                        <img src="../assets/img/hofmann15/hoffman-landing-2.png" class="topbar-img-2"> <!--landing image-->
+                        <figcaption>
+                            Hans Hofmann: <i>Morning Mist</i>, 1958; oil on canvas; 55-1/8 x 40-3/8 in.; BAMPFA, bequest of the artist.
+                        </figcaption>
+                    </figure>
+                </div>
+                </div>
+                <div class="col-12 col-lg-6 topbar-content">
                     <div class="holder">
                     <h1 id="proj-title">nature of appstraction</h1> <!--the title-->
                     <h5>dismantling the exclusive nature of art museums</h5> <!--the text-->
@@ -110,7 +119,7 @@
                                 <h4 id="proj-details">Partner</h4>
                             </div>
                             <div class="col-8">
-                                <h6 id="proj-answers">BAMPFA</h6> <!--the partner-->
+                                <h6 id="proj-answers">UC Berkeley Art Museum and Pacific Film Archive (BAMPFA)</h6> <!--the partner-->
                             </div>
                         </div>
                    
@@ -395,7 +404,7 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="img-container deliverable-img-container">
-                            <iframe class ="deliverable-img youtube" width="600" height="450" src="https://www.youtube.com/embed/GYRoO9SDkO8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> <!-- Youtube embedded link-->
+                            <!-- <iframe class ="deliverable-img youtube" width="600" height="450" src="https://www.youtube.com/embed/GYRoO9SDkO8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> Youtube embedded link -->
                         </div>
                     </div>
                     <div class="col-12">
@@ -444,7 +453,12 @@
             </div>
             <div class="col-12 col-lg-6 order-lg-6 d-flex justify-content-center">
                 <div class="img-container deliverable-img-container">
-                    <img src="../assets/img/hofmann15/deliv-3.png" class="deliverable-img small"> <!--third deliverable img-->
+                    <figure>
+                        <img src="../assets/img/hofmann15/deliv-3.png" class="deliverable-img small"> <!--third deliverable img-->
+                        <figcaption>
+                            <i>Indian Summer</i>, 1959; oil on canvas; 60-1/8 x 72-1/4 in.; BAMPFA, gift of Hans Hofmann.
+                        </figcaption>
+                    </figure>
                 </div>
             </div>
 
