hofmann youtube vid updated

--- a/v1.5/hofmann15.html
+++ b/v1.5/hofmann15.html
@@ -404,7 +404,8 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="img-container deliverable-img-container">
-                            <!-- <iframe class ="deliverable-img youtube" width="600" height="450" src="https://www.youtube.com/embed/GYRoO9SDkO8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> Youtube embedded link -->
+                            <iframe class="deliverable-img youtube" width="450" height="350" src="https://www.youtube.com/embed/BZ2harC1l7w" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            <!-- Youtube embedded link -->
                         </div>
                     </div>
                     <div class="col-12">
