fixed link to app on hans hofmann page

--- a/v1.5/hofmann15.html
+++ b/v1.5/hofmann15.html
@@ -322,7 +322,7 @@
         <h2 class="deliverables-header">Deliverables</h2>
             <div class="container">
                 <p>
-                    Our solution combines inutition and ease into an accompanying web application that guides users through the exhibit and provides customizable, enriching content to enhance the museum-going experience. See the finished product here.
+                    Our solution combines intuition and ease into an accompanying web application that guides users through the exhibit and provides customizable, enriching content to enhance the museum-going experience. See the finished product <a href="https://bampfa.now.sh/" target="_blank" class="partner-link">here</a>.
                 </p> <!--deliverables overview-->
             </div>
 
